apps/hermes-agent/gateway/components/webhook/patch-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hermes-agent-gateway
spec:
  template:
    spec:
      containers:
        - name: hermes-agent-gateway
          ports:
            - name: webhook
              containerPort: 8644
