apps/hermes-agent/gateway/components/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automata-webhook
spec:
  defaultBackend:
    service:
      name: hermes-agent-gateway
      port:
        name: webhook
  tls:
    - hosts:
        - automata-webhook
